--- a/Lesson2/index.html
+++ b/Lesson2/index.html
@@ -12,10 +12,11 @@
     <div class="container">
         <div class="header">
             <ul>
-                <li><button><a href="./page1.html" target="iframe_a">нүүр хуудас</a></button></li>
-                <li><button><a href="https://www.pexels.com/" target="iframe_a">зураг</a></button></li>
-                <li><button><a href="./page3.html" target="iframe_a">зурагнууд</a></button></li>
-                <li><button><a href="./page4.html" target="iframe_a">газрын зураг</a></button></li>
+                <li><a href="./page1.html" target="iframe_a"><button>нүүр хуудас</button></a></li>
+                <li><a href="https://www.pexels.com/" target="iframe_a"><button>зураг</button></a></li>
+                <li><a href="./page3.html" target="iframe_a"><button>зурагнууд</button></a></li>
+                <li><a href="./page4.html" target="iframe_a"><button>газрын зураг</button></a></li>
+                <li><a href="./page5.html" target="iframe_a"><button>video</button></a></li>
             </ul>
         </div>
         <div class="main">
@@ -26,18 +27,13 @@
                 </div>
                 <div class="about">
                     <h3>хувийн мэдээлэл</h3>
-                    <br>
-                    <hr>
-                    <br>
-                    <hr>
-                    <br>
-                    <hr>
-                    <br>
-                    <hr>
-                    <br>
-                    <hr>
-                    <br>
-                    <hr>
+                    <p><span>Овог:</span> Одгэрэл</p>
+                    <p><span>Нэр:</span> Од-очир</p>
+                    <p><span>Нас:</span> 18</p>
+                    <p><span>Төрсөн он сар:</span> 2006-04-03</p>
+                    <p><span>Мэргэжил:</span> IT Хөгжүүлэгч</p>
+                    <p><span>Ажил:</span> программист</p>
+                    <p><span>мэдээлэл:</span> IO institute 2024 онд шинээр элсэж сурч байгаа.</p>
                 </div>
             </div>
             <div class="content">
@@ -45,7 +41,7 @@
                     <iframe src="page1.html" name="iframe_a" height="100%" width="100%"></iframe>
                 </div>
                 <div class="address">
-                    <h2>Гэрийн хаяг</h2>
+                    <h2>WW5Q+FRM, BZD - 25 khoroo, Ulaanbaatar 13372</h2>
                 </div>
             </div>
         </div>
