--- a/Lesson3/SignIn_2/pagw1.html
+++ b/Lesson3/SignIn_2/pagw1.html
@@ -1,122 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login Form</title>
     <style>
-        body {
-            background: #4CAF50;
-            /* Green background */
-            font-family: 'Arial', sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            margin: 0;
-        }
-
-        .login-form {
-            background: rgba(255, 255, 255, 0.8);
-            /* Semi-transparent white */
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-            width: 350px;
-        }
-
-        .login-form h2 {
-            text-align: center;
-            margin-bottom: 20px;
-            color: #333;
-        }
-
-        .form-group {
-            margin-bottom: 20px;
-        }
-
-        .form-group label {
-            display: block;
-            margin-bottom: 5px;
-            color: #333;
-        }
-
-        .form-group input {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            box-sizing: border-box;
-        }
-
-        .form-group input:focus {
-            outline: none;
-            border-color: #4CAF50;
-        }
-
-        .remember {
-            display: flex;
-            align-items: center;
-            margin-bottom: 20px;
-        }
-
-        .remember input[type="checkbox"] {
-            margin-right: 5px;
-        }
-
-        .remember label {
-            color: #333;
-        }
-
-        .forgot- password {
-            display: block;
-            text-align: center;
-            margin-top: 10px;
-            color: #4CAF50;
-            text-decoration: none;
-        }
-
-        .forgot-password:hover {
-            text-decoration: underline;
-        }
-
-        .submit-btn {
-            background-color: #4CAF50;
-            color: white;
-            padding: 12px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            width: 100%;
-        }
-
-        .submit-btn:hover {
-            background-color: #45a049;
-        }
+      body {
+        background-color: #4a4e3d;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0;
+      }
+      .login-container {
+        background: rgba(255, 255, 255, 0.2);
+        border-radius: 15px;
+        padding: 20px;
+        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+        width: 300px;
+        text-align: center;
+      }
+      .login-container h2 {
+        margin-bottom: 20px;
+        color: white;
+      }
+      .login-container input {
+        width: 100%;
+        padding: 10px;
+        margin: 10px 0;
+        border: none;
+        border-radius: 5px;
+        background: rgba(255, 255, 255, 0.8);
+      }
+      .login-container button {
+        width: 100%;
+        padding: 10px;
+        border: none;
+        border-radius: 5px;
+        background-color: #4caf50;
+        color: white;
+        font-weight: bold;
+        cursor: pointer;
+      }
+      .login-container button:hover {
+        background-color: #45a049;
+      }
+      .remember-me {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+      }
+      .remember-me label {
+        color: white;
+      }
+      .forgot-password {
+        color: white;
+        text-decoration: none;
+      }
     </style>
-</head>
-
-<body>
-    <div class="login-form">
-        <h2>Login</h2>
-        <form>
-            <div class="form-group">
-                <label for="email">Email ID:</label>
-                <input type="text" id="email" name="email" required>
-            </div>
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
-            </div>
-            <div class="remember">
-                <input type="checkbox" id="remember" name="remember">
-                <label for="remember">Remember Me</label>
-            </div>
-            <button type="submit" class="submit-btn">Login</button>
-            <a href="#" class="forgot-password">Forgot Password?</a>
-        </form>
+  </head>
+  <body>
+    <div class="login-container">
+      <h2>Login</h2>
+      <input type="text" placeholder="Email ID" required />
+      <input type="password" placeholder="Password" required />
+      <div class="remember-me">
+        <input type="checkbox" id="remember" />
+        <label for="remember">Remember me</label>
+      </div>
+      <button type="submit">LOGIN</button>
+      <a href="#" class="forgot-password">Forgot Password?</a>
     </div>
-</body>
-
+  </body>
 </html>
