--- a/Lesson3/SignIn_4/index.html
+++ b/Lesson3/SignIn_4/index.html
@@ -30,20 +30,43 @@
           <div class="content">
             <form action="#">
               <div class="section">
-                <label for="Email"
-                  >Users name or Email<input
+                <div class="lab">
+                  <label for="first_name">FIRST NAME</label><br />
+                  <input type="name" name="first_name" value="Chloe" /><br />
+                </div>
+                <div class="lab">
+                  <label for="last_name">LAST NAME</label><br />
+                  <input type="name" name="last_name" value="Cathcart" /><br />
+                </div>
+              </div>
+              <div class="main">
+                <div class="space">
+                  <label for="username">USERNAME</label><br />
+                  <input
+                    type="name"
+                    name="username"
+                    value="ChloeCathcart"
+                  /><br />
+                </div>
+                <div class="space">
+                  <label for="email_address">EMAIL ADDRESS</label><br />
+                  <input
                     type="email"
-                    id="Iemail"
-                    name="Iemail"
-                    value="Chloe" /><br /></label
-                ><br />
-                <label for="Password"
-                  >Password<input
+                    name="email_address"
+                    value="ChloeCathcart93@gmail.com"
+                  /><br />
+                </div>
+                <div class="space">
+                  <label for="password">PASSWORD</label><br />
+                  <input
                     type="password"
-                    id="Ipassword"
                     name="password"
-                    value="**********" /><br /></label
-                ><br />
+                    value="**********"
+                  /><br />
+                </div>
+              </div>
+              <div class="sub">
+                <input type="submit" name="sub" value="SIGN UP" />
               </div>
             </form>
           </div>
