--- a/Lesson4/index.html
+++ b/Lesson4/index.html
@@ -11,8 +11,9 @@
 
 <body>
 
-    <div class="container">
+    <div class="container col-2 p-5">
         <!-- Button trigger modal -->
+
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
             Launch demo modal
         </button>
