--- a/Lesson4/desktop.html
+++ b/Lesson4/desktop.html
@@ -4,63 +4,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/bootstrap.css">
+    <title>Desktop and mobile</title>
 </head>
 
 <body>
-    <div class="container">
-        <div class="row justify-content-start">
-            <div class="col-4">
-                One of two columns
-            </div>
-            <div class="col-4">
-                One of two columns
-            </div>
-        </div>
+    <div class="container-fluid">
         <div class="row justify-content-center">
-            <div class="col-4">
-                One of two columns
-            </div>
-            <div class="col-4">
-                One of two columns
-            </div>
-        </div>
-        <div class="row justify-content-end">
-            <div class="col-4">
-                One of two columns
-            </div>
-            <div class="col-4">
-                One of two columns
-            </div>
-        </div>
-        <div class="row justify-content-around">
-            <div class="col-4">
-                One of two columns
-            </div>
-            <div class="col-4">
-                One of two columns
-            </div>
-        </div>
-        <div class="row justify-content-between">
-            <div class="col-4">
-                One of two columns
-            </div>
-            <div class="col-4">
-                One of two columns
-            </div>
-        </div>
-        <div class="row justify-content-evenly">
-            <div class="col-4">
-                One of two columns
-            </div>
-            <div class="col-4">
-                One of two columns
+            <div class="col-12 col-md-10">
+                <h2 class="text-center text-success">desktop and mobile</h2>
+                <div class="row">
+                    <div class="col-lg-3 col-md-6 col-sm-6 p-2">
+                        <div class="bg-success" style="height: 100px; border-radius:20px;"></div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 p-2">
+                        <div class="bg-success" style="height: 100px; border-radius:20px;"></div>
+                    </div>
+                    <div class="col-lg-6 col-sm-12 p-2">
+                        <div class="bg-info" style="height: 100px; border-radius:20px;"></div>
+                    </div>
+
+                    <div class="col-lg-6 col-md-12 col-sm-12 p-2">
+                        <div class="bg-danger" style="height: 100px;border-radius:20px;"></div>
+                    </div>
+                    <div class="col-lg-6 col-md-6 col-sm-6 p-2">
+                        <div class="bg-danger" style="height: 100px;border-radius:20px;"></div>
+                    </div>
+                    <div class="col-lg-12 col-md-6 col-sm-6 p-2">
+                        <div class="bg-light" style="height: 100px; border-radius:20px;"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
-    <script src="./js/bootstrap.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
