--- a/Lesson4/carousel.html
+++ b/Lesson4/carousel.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -6,12 +6,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
 </head>
 
 <body>
     <div class="container-fluid">
-        <div class="bd-example col-lg-8 mx-auto m-3 align-content-lg-center d-none d-xl-block ">
+        <div class="col-lg-8 mx-auto m-3 align-content-lg-center d-none d-xl-block">
             <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
@@ -21,15 +21,17 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="https://images.pexels.com/photos/326055/pexels-photo-326055.jpeg"
-                            class="d-block w-100" alt="...">
+                            class="d-block w-100" alt="..." />
                         <div class="carousel-caption d-none d-md-block">
                             <h5>First slide label</h5>
-                            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                            <p>
+                                Nulla vitae elit libero, a pharetra augue mollis interdum.
+                            </p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="https://images.pexels.com/photos/2004161/pexels-photo-2004161.jpeg"
-                            class="d-block w-100" alt="...">
+                            class="d-block w-100" alt="..." />
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Second slide label</h5>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -37,10 +39,13 @@
                     </div>
                     <div class="carousel-item">
                         <img src="https://images.pexels.com/photos/3432223/pexels-photo-3432223.jpeg"
-                            class="d-block w-100" alt="...">
+                            class="d-block w-100" alt="..." />
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Third slide label</h5>
-                            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                            <p>
+                                Praesent commodo cursus magna, vel scelerisque nisl
+                                consectetur.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -58,11 +63,11 @@
 
     <div class="d-xl-none text-center">
         <img src="https://images.pexels.com/photos/3432223/pexels-photo-3432223.jpeg" class="img-fluid w-50 h-25 m-2"
-            alt="Image 1">
+            alt="Image 1" />
         <img src="https://images.pexels.com/photos/3432223/pexels-photo-3432223.jpeg" class="img-fluid w-50 h-25 m-2"
-            alt="Image 2">
+            alt="Image 2" />
         <img src="https://images.pexels.com/photos/3432223/pexels-photo-3432223.jpeg" class="img-fluid w-50 h-25 m-2"
-            alt="Image 3">
+            alt="Image 3" />
     </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
