--- a/Lesson4/desktop.html
+++ b/Lesson4/desktop.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desktop and mobile</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
 </head>
 
 <body>
@@ -13,10 +15,10 @@
             <div class="col-12 col-md-10">
                 <h2 class="text-center text-success">desktop and mobile</h2>
                 <div class="row">
-                    <div class="col-lg-3 col-md-6 col-sm-6 p-2">
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 p-2 ">
                         <div class="bg-success" style="height: 100px; border-radius:20px;"></div>
                     </div>
-                    <div class="col-lg-3 col-md-6 col-sm-6 p-2">
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 p-2">
                         <div class="bg-success" style="height: 100px; border-radius:20px;"></div>
                     </div>
                     <div class="col-lg-6 col-sm-12 p-2">
@@ -30,7 +32,7 @@
                         <div class="bg-danger" style="height: 100px;border-radius:20px;"></div>
                     </div>
                     <div class="col-lg-12 col-md-6 col-sm-6 p-2">
-                        <div class="bg-light" style="height: 100px; border-radius:20px;"></div>
+                        <div class="bg-secondary" style="height: 100px; border-radius:20px;"></div>
                     </div>
                 </div>
             </div>
