--- a/Lesson6/imgRead.html
+++ b/Lesson6/imgRead.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title></head
+  >// //
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>//
-//
-
-<body>
-    <style>
-        padding: -5px;
-    </style>
-</body>
-
+  <body>
+    <style></style>
+  </body>
 </html>
