--- a/Work/index.html
+++ b/Work/index.html
@@ -4,11 +4,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>StartUp</title>
+    <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="shortcut icon" href="./src/img/favicon.ico">
 </head>
 
 <body>
 
+    <header>
+        <nav>
+            <div class="logo">
+                <a href="#"><img src="./src/img/logo.png" alt="" width="100%"></a>
+            </div>
+            <ul>
+                <a href="#">
+                    <li>Home</li>
+                </a>
+                <a href="#">
+                    <li>About</li>
+                </a>
+                <a href="#">
+                    <li>Pages</li>
+                </a>
+                <a href="#">
+                    <li>Contact</li>
+                </a>
+            </ul>
+            <div class="register">
+                <a href="#">register</a>
+                <a class="active" href="#">login</a>
+            </div>
+        </nav>
+    </header>
+    <div class="container">
+        <div class="banner">
+            <div class="left-banner">
+                <h2>Digital Media Agency</h2>
+                <h1>We Boost Your Website <br> Traffic</h1>
+                <p>This template is brought to you by TemplateMo website. Feel free to use this <br> for a commercial
+                    purpose. You are not
+                    allowed to redistribute the template <br> ZIP file on any other template website. Thank you.</p>
+                <div class="link">
+                    <a href="">free quote</a>
+                </div>
+
+
+            </div>
+            <div class="right-banner">
+                <img src="./src/img/rocket.png" alt="" width="100%">
+            </div>
+        </div>
+        <div class="second">
+            <div class="left-banner">
+                <h2>Digital Media Agency</h2>
+                <h1>We Boost Your Website <br> Traffic</h1>
+                <p>This template is brought to you by TemplateMo website. Feel free to use this <br> for a commercial
+                    purpose. You are not
+                    allowed to redistribute the template <br> ZIP file on any other template website. Thank you.</p>
+                <div class="link">
+                    <a href="">free quote</a>
+                </div>
+
+
+            </div>
+            <div class="right-banner">
+                <img src="./src/img/rocket.png" alt="" width="100%">
+            </div>
+        </div>
+    </div>
+    <footer></footer>
+
+    <script src="./src/javascript/main.js"></script>
 </body>
 
 </html>
