--- a/Work/index.html
+++ b/Work/index.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StartUp</title>
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="./src/css/style.css">
     <link rel="shortcut icon" href="./src/img/favicon.ico">
+
 </head>
 
 <body>
@@ -54,27 +57,41 @@
                 <img src="./src/img/rocket.png" alt="" width="100%">
             </div>
         </div>
-        <div class="second">
-            <div class="left-banner">
-                <h2>Digital Media Agency</h2>
-                <h1>We Boost Your Website <br> Traffic</h1>
-                <p>This template is brought to you by TemplateMo website. Feel free to use this <br> for a commercial
-                    purpose. You are not
-                    allowed to redistribute the template <br> ZIP file on any other template website. Thank you.</p>
-                <div class="link">
-                    <a href="">free quote</a>
+        <div class="contact">
+            <div class="contact-header">
+                <p>Contact Us</p>
+                <div class="contact-img">
+                    <h2>Get In Touch With Us <span>Now</span></h2>
+                    <img src="./src/img/contact-dec-v3.png" width="100%" alt="">
                 </div>
-
-
-            </div>
-            <div class="right-banner">
-                <img src="./src/img/rocket.png" alt="" width="100%">
             </div>
         </div>
+        <div class="maps">
+            <div class="maps-head">
+                <h2>Our club Location</h2>
+            </div>
+            <div class="maps-main">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2673.8811483815725!2d106.9313129!3d47.9193371!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5d96923ec467a403%3A0x43f8299e566d0442!2sUniversity%20of%20Finance%20%26%20Economics%20(UFE)!5e0!3m2!1sen!2smn!4v1734503024109!5m2!1sen!2smn"
+                    width="600" height="400" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+
+
     </div>
-    <footer></footer>
+    <footer>
+        <div class="footer-text">
+            <p>Copyright © 2022 DigiMedia Co., Ltd. All Rights Reserved.</p>
+            <p>Design: TemplateMo</p>
+        </div>
+
+    </footer>
 
     <script src="./src/javascript/main.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script> -->
 </body>
 
 </html>
