--- a/Work/index.html
+++ b/Work/index.html
@@ -7,6 +7,7 @@
     <title>StartUp</title>
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./src/css/style.css">
     <link rel="shortcut icon" href="./src/img/favicon.ico">
 
@@ -57,24 +58,82 @@
                 <img src="./src/img/rocket.png" alt="" width="100%">
             </div>
         </div>
-        <div class="contact">
-            <div class="contact-header">
-                <p>Contact Us</p>
-                <div class="contact-img">
-                    <h2>Get In Touch With Us <span>Now</span></h2>
-                    <img src="./src/img/contact-dec-v3.png" width="100%" alt="">
+        <div class="view">
+            <div class="view-item">
+                <i class="fa fa-solid fa-certificate" style="color: #FFD43B;"></i>
+                <h2>1234</h2>
+                <p>Years Experience</p>
+            </div>
+            <div class="view-item">
+                <i class="fa fa-solid fa-users" style="color: #FFD43B;"></i>
+                <h2>1234</h2>
+                <p>Years Experience</p>
+            </div>
+            <div class="view-item">
+                <i class="fa fa-solid fa-eye" style="color: #FFD43B;"></i>
+                <h2>1234</h2>
+                <p>Years Experience</p>
+            </div>
+            <div class="view-item">
+                <i class="fa fa-solid fa-check" style="color: #FFD43B;"></i>
+                <h2>1234</h2>
+                <p>Years Experience</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-title">
+                <h2>Our Services<i class="fa fa-solid fa-bolt fa-sm" style="color: #B197FC;"></i></h2>
+
+            </div>
+            <div class="card-list">
+                <div class="card-items">
+                    <img src="./src/img/s1.png" alt="">
+                    <div class="card-details">
+                        <h3>Equipment installation</h3>
+                        <p>There are many variations of passages of Lorem Ipsum available,</p>
+                    </div>
+                </div>
+                <div class="card-items active">
+                    <img src="./src/img/s2.png" alt="">
+                    <div class="card-details">
+                        <h3>Windmill Energy</h3>
+                        <p>There are many variations of passages of Lorem Ipsum available,</p>
+                    </div>
+                </div>
+                <div class="card-items">
+                    <img src="./src/img/s3.png" alt="">
+                    <div class="card-details">
+                        <h3>Equipment Maintenance</h3>
+                        <p>There are many variations of passages of Lorem Ipsum available,</p>
+                    </div>
+                </div>
+                <div class="card-items">
+                    <img src="./src/img/s4.png" alt="">
+                    <div class="card-details">
+                        <h3>Offshore Engineering</h3>
+                        <p>There are many variations of passages of Lorem Ipsum available,</p>
+                    </div>
+                </div>
+                <div class="card-items">
+                    <img src="./src/img/s5.png" alt="">
+                    <div class="card-details">
+                        <h3>Electrical Wiring</h3>
+                        <p>There are many variations of passages of Lorem Ipsum available,</p>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="maps">
-            <div class="maps-head">
-                <h2>Our club Location</h2>
+        <div class="content">
+            <div class="content-title">
+                <h2>Lorem Ipsum</h2>
             </div>
-            <div class="maps-main">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2673.8811483815725!2d106.9313129!3d47.9193371!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5d96923ec467a403%3A0x43f8299e566d0442!2sUniversity%20of%20Finance%20%26%20Economics%20(UFE)!5e0!3m2!1sen!2smn!4v1734503024109!5m2!1sen!2smn"
-                    width="600" height="400" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div class="content-info">
+                <p>Eiusmod cupidatat cillum labore officia et anim commodo dolore sint. Reprehenderit eu irure deserunt
+                    consectetur nulla sunt cupidatat commodo nisi sit et sit anim. Proident do qui in aliqua voluptate
+                    excepteur pariatur duis ullamco. Est ea non exercitation mollit. Ullamco nulla laboris sit sit elit
+                    eiusmod est Lorem et enim aliqua mollit. Laborum non dolore velit irure. Dolore consectetur quis sit
+                    consectetur tempor eiusmod quis ex cillum duis anim.</p>
+                <img src="./src/img/github.png" width="100%" alt="">
             </div>
         </div>
 
