--- a/Work/index.html
+++ b/Work/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./src/css/style.css">
     <link rel="shortcut icon" href="./src/img/favicon.ico">
+    <link rel="stylesheet" href="./src/css/responsive.css">
 
 </head>
 
@@ -20,23 +21,30 @@
             <div class="logo">
                 <a href="#"><img src="./src/img/logo.png" alt="" width="100%"></a>
             </div>
-            <ul>
-                <a href="#">
+            <ul id="nav-bar">
+                <a href="./">
                     <li>Home</li>
                 </a>
                 <a href="#">
-                    <li>About</li>
+                    <li>Table</li>
                 </a>
-                <a href="#">
-                    <li>Pages</li>
+                <a href="./gallery.html">
+                    <li>Gallery</li>
                 </a>
-                <a href="#">
+                <a href="./contact.html">
                     <li>Contact</li>
                 </a>
+                <div class="register mobile">
+                    <a href="./signup.html">signup</a>
+                    <a class="active" href="./signin.html">signin</a>
+                </div>
             </ul>
             <div class="register">
-                <a href="#">register</a>
-                <a class="active" href="#">login</a>
+                <a href="./signup.html">signup</a>
+                <a class="active" href="./signin.html">signin</a>
+            </div>
+            <div class="menu" id="menu-icon">
+                <i class="fa fa-solid fa-bars" style="color: #ffffff;"></i>
             </div>
         </nav>
     </header>
@@ -45,9 +53,9 @@
             <div class="left-banner">
                 <h2>Digital Media Agency</h2>
                 <h1>We Boost Your Website <br> Traffic</h1>
-                <p>This template is brought to you by TemplateMo website. Feel free to use this <br> for a commercial
+                <p>This template is brought to you by TemplateMo website. Feel free to use this for a commercial
                     purpose. You are not
-                    allowed to redistribute the template <br> ZIP file on any other template website. Thank you.</p>
+                    allowed to redistribute the template ZIP file on any other template website. Thank you.</p>
                 <div class="link">
                     <a href="">free quote</a>
                 </div>
@@ -141,8 +149,8 @@
     </div>
     <footer>
         <div class="footer-text">
-            <p>Copyright © 2022 DigiMedia Co., Ltd. All Rights Reserved.</p>
-            <p>Design: TemplateMo</p>
+            <p>Copyright© 2024. IO institute All Rights Reserved.</p>
+            <p>Design: Bat-Amgalan and Odokaa</p>
         </div>
 
     </footer>
