--- a/Work/index.html
+++ b/Work/index.html
@@ -25,7 +25,7 @@
                 <a href="./">
                     <li>Home</li>
                 </a>
-                <a href="#">
+                <a href="table.html">
                     <li>Table</li>
                 </a>
                 <a href="./gallery.html">
