--- a/Work/Gallery.html
+++ b/Work/Gallery.html
@@ -22,8 +22,8 @@
                 <a href="./">
                     <li>Home</li>
                 </a>
-                <a href="#">
-                    <li>table</li>
+                <a href="table.html">
+                    <li>Members</li>
                 </a>
                 <a href="./gallery.html">
                     <li>gallery</li>
@@ -49,7 +49,7 @@
     <div class="container">
         <div class="gallery">
             <div class="gallery-title">
-                <h2>Brand your company</h2>
+                <h2></h2>
             </div>
             <div class="gallery-list">
                 <div class="gallery-items">
