--- a/Work/contact.html
+++ b/Work/contact.html
@@ -22,8 +22,8 @@
                 <a href="./">
                     <li>Home</li>
                 </a>
-                <a href="#">
-                    <li>table</li>
+                <a href="table.html">
+                    <li>Members</li>
                 </a>
                 <a href="./gallery.html">
                     <li>gallery</li>
@@ -59,8 +59,8 @@
         <div class="contact-form">
             <div class="contact-left">
                 <form method="POST" action="#" id="contact-fm">
-                    <h2>Just say Hello !</h2>
-                    <p>Let us know more about you</p>
+                    <h2>Анкет</h2>
+                    
                     <span><input type="text" name="F_name" placeholder="First Name">
                         <input type="text" name="L_name" placeholder="Last Name"></span>
                     <span><input type="email" name="Mail" placeholder="Mail">
@@ -75,11 +75,10 @@
             <div class="contact-right">
                 <div class="contact-info">
                     <div class="contact-head">
-                        <h2>Contact Information</h2>
-                        <p>John Doe, 456 Elm Street, Suite 3, Los Angeles, CA 90001, USA</p>
-                        <p>US phone number: 1-212-456-7890</p>
-                        <p>Work on the project to be limited to the following hours: -Monday to Saturday - 7.00am to
-                            5.00pm</p>
+                        <h2>Холбоо барих</h2>
+                        <p>UFE Startup club</p>
+                        <p>ufestartup_club@ufe.edu.mn</p>
+                        <p>@ufestartup.club</p>
                     </div>
                     <div class="contact-last">
                         <h2>Follow Us</h2>
