--- a/Work/index.html
+++ b/Work/index.html
@@ -26,7 +26,7 @@
                     <li>Home</li>
                 </a>
                 <a href="table.html">
-                    <li>Table</li>
+                    <li>Members</li>
                 </a>
                 <a href="./gallery.html">
                     <li>Gallery</li>
@@ -51,13 +51,16 @@
     <div class="container">
         <div class="banner">
             <div class="left-banner">
-                <h2>Digital Media Agency</h2>
-                <h1>We Boost Your Website <br> Traffic</h1>
-                <p>This template is brought to you by TemplateMo website. Feel free to use this for a commercial
-                    purpose. You are not
-                    allowed to redistribute the template ZIP file on any other template website. Thank you.</p>
+                <h2>Клубийн алсын хараа</h2>
+                <h1>START UP CLUB<br></h1>
+                <p>  Ирээдүйн эдийн засагт
+                    эерэг нөлөө үзүүлэх залуу
+                    энтрепренеруудийн
+                    хүчирхэг хамт олныг бий
+                    болгоно.
+                    </p>
                 <div class="link">
-                    <a href="">free quote</a>
+                    <a href="">Үйл ажиллагаа    </a>
                 </div>
 
 
@@ -97,50 +100,69 @@
                 <div class="card-items">
                     <img src="./src/img/s1.png" alt="">
                     <div class="card-details">
-                        <h3>Equipment installation</h3>
-                        <p>There are many variations of passages of Lorem Ipsum available,</p>
+                        <h3>Innovation week.</h3>
+                        <p>
+                            Их сургууль хооронд бидний зүгээс төслийн уралдаан
+                            зарлаж, шагнал урамшуулал бүхий стартап тэмцээн
+                            зохиох. СЭЗИС-ийн дотоод үйл ажиллагаа,
+                            энтрепренерсургалтыг суртчилах зорилготой</p>
                     </div>
                 </div>
                 <div class="card-items active">
                     <img src="./src/img/s2.png" alt="">
                     <div class="card-details">
-                        <h3>Windmill Energy</h3>
-                        <p>There are many variations of passages of Lorem Ipsum available,</p>
+                        <h3>Community system.</h3>
+                        <p>
+                            Клубийн үе үеийн гишүүд хоорондын туршлага,
+                            networking сайжруулах зорилготой Enterprenuer Land
+                            системийг үүсгэн байгуулах Community hub-тай болох.</p>
                     </div>
                 </div>
                 <div class="card-items">
                     <img src="./src/img/s3.png" alt="">
                     <div class="card-details">
-                        <h3>Equipment Maintenance</h3>
-                        <p>There are many variations of passages of Lorem Ipsum available,</p>
+                        <h3>Байгуулагдсан он</h3>
+                        <p>
+                            2017 онд үүсгэн
+                            байгуулагдсан.
+                            </p>
                     </div>
                 </div>
                 <div class="card-items">
                     <img src="./src/img/s4.png" alt="">
                     <div class="card-details">
-                        <h3>Offshore Engineering</h3>
-                        <p>There are many variations of passages of Lorem Ipsum available,</p>
+                        <h3>Клубийн зорилго</h3>
+                        <p>Оюутнуудад инновац сэтгэлгээг
+                            хөгжүүлэх, зөвлөхүүд, хамтран
+                            ажиллах бизнесийн талбарын
+                            гүүр болох, тогтвортой
+                            бизнесийн гараагаа эхлүүлэхэд
+                            туслалцаа үзүүлэх
+                            </p>
                     </div>
                 </div>
                 <div class="card-items">
                     <img src="./src/img/s5.png" alt="">
                     <div class="card-details">
-                        <h3>Electrical Wiring</h3>
-                        <p>There are many variations of passages of Lorem Ipsum available,</p>
+                        <h3>Гишүүдч</h3>
+                        <p>
+                            Одоогоор 25 гишүүнтэй.</p>
                     </div>
                 </div>
             </div>
         </div>
         <div class="content">
             <div class="content-title">
-                <h2>Lorem Ipsum</h2>
+               
             </div>
             <div class="content-info">
-                <p>Eiusmod cupidatat cillum labore officia et anim commodo dolore sint. Reprehenderit eu irure deserunt
-                    consectetur nulla sunt cupidatat commodo nisi sit et sit anim. Proident do qui in aliqua voluptate
-                    excepteur pariatur duis ullamco. Est ea non exercitation mollit. Ullamco nulla laboris sit sit elit
-                    eiusmod est Lorem et enim aliqua mollit. Laborum non dolore velit irure. Dolore consectetur quis sit
-                    consectetur tempor eiusmod quis ex cillum duis anim.</p>
+                <p>Стартап нь энтрепренерүүдийн санаан дээр
+                    суурилдаг. Стартапууд нь зах зээлд байнга
+                    туршиж үзэх шаардлагатай өвөрмөц, шинэлэг
+                    бүтээгдэхүүн, үйлчилгээг үзүүлэх замаар сорилтыг
+                    шинэлэг аргаар шийдвэрлэхийг хүсдэг бизнес
+                    эрхлэгчдээс бүтдэг.
+                    </p>
                 <img src="./src/img/github.png" width="100%" alt="">
             </div>
         </div>
