--- a/Work/signup.html
+++ b/Work/signup.html
@@ -146,7 +146,7 @@
                 </div>
                 <div class="back-link">
                     <p class="login-register-text">Already have an account? <a href="./signin.html">Sign in</a>.</p>
-                    <a class="active" href="./signin.html">нүүр хуудас</a>
+                    <a class="active" href="./">нүүр хуудас</a>
                 </div>
             </form>
         </div>
