--- a/Work/Gallery.html
+++ b/Work/Gallery.html
@@ -49,32 +49,38 @@
     <div class="container">
         <div class="gallery">
             <div class="gallery-title">
-                <h2>Brand your company</h2>
+                <h2>Бидний үйл ажиллагааны цомог</h2>
             </div>
             <div class="gallery-list">
                 <div class="gallery-items">
-                    <img src="./src/img/1.jpg" width="100%" alt="error">
+                    <img src="./src/img/img1.png" width="100%" alt="error">
                 </div>
                 <div class="gallery-items">
-                    <img src="./src/img/2.jpg" width="100%" alt="error">
+                    <img src="./src/img/img2.png" width="100%" alt="error">
                 </div>
                 <div class="gallery-items">
-                    <img src="./src/img/3.jpg" width="100%" alt="error">
+                    <img src="./src/img/img3.png" width="100%" alt="error">
                 </div>
                 <div class="gallery-items">
-                    <img src="./src/img/4.jpg" width="100%" alt="error">
+                    <img src="./src/img/img4.png" width="100%" alt="error">
                 </div>
                 <div class="gallery-items">
-                    <img src="./src/img/5.jpg" width="100%" alt="error">
+                    <img src="./src/img/img5.png" width="100%" alt="error">
                 </div>
                 <div class="gallery-items">
-                    <img src="./src/img/6.jpg" width="100%" alt="error">
+                    <img src="./src/img/img6.png" width="100%" alt="error">
                 </div>
                 <div class="gallery-items">
-                    <img src="./src/img/7.jpg" width="100%" alt="error">
+                    <img src="./src/img/img7.png" width="100%" alt="error">
                 </div>
                 <div class="gallery-items">
-                    <img src="./src/img/8.jpg" width="100%" alt="error">
+                    <img src="./src/img/img8.png" width="100%" alt="error">
+                </div>
+                <div class="gallery-items">
+                    <img src="./src/img/img9.png" width="100%" alt="error">
+                </div>
+                <div class="gallery-items">
+                    <img src="./src/img/img10.png" width="100%" alt="error">
                 </div>
             </div>
         </div>
