--- a/Work/index.html
+++ b/Work/index.html
@@ -53,14 +53,14 @@
             <div class="left-banner">
                 <h2>Клубийн алсын хараа</h2>
                 <h1>START UP CLUB<br></h1>
-                <p>  Ирээдүйн эдийн засагт
+                <p> Ирээдүйн эдийн засагт
                     эерэг нөлөө үзүүлэх залуу
                     энтрепренеруудийн
                     хүчирхэг хамт олныг бий
                     болгоно.
-                    </p>
+                </p>
                 <div class="link">
-                    <a href="">Үйл ажиллагаа    </a>
+                    <a href="./Gallery.html">Үйл ажиллагаа </a>
                 </div>
 
 
@@ -125,7 +125,7 @@
                         <p>
                             2017 онд үүсгэн
                             байгуулагдсан.
-                            </p>
+                        </p>
                     </div>
                 </div>
                 <div class="card-items">
@@ -138,7 +138,7 @@
                             гүүр болох, тогтвортой
                             бизнесийн гараагаа эхлүүлэхэд
                             туслалцаа үзүүлэх
-                            </p>
+                        </p>
                     </div>
                 </div>
                 <div class="card-items">
@@ -153,7 +153,7 @@
         </div>
         <div class="content">
             <div class="content-title">
-               
+
             </div>
             <div class="content-info">
                 <p>Стартап нь энтрепренерүүдийн санаан дээр
@@ -162,7 +162,7 @@
                     бүтээгдэхүүн, үйлчилгээг үзүүлэх замаар сорилтыг
                     шинэлэг аргаар шийдвэрлэхийг хүсдэг бизнес
                     эрхлэгчдээс бүтдэг.
-                    </p>
+                </p>
                 <img src="./src/img/github.png" width="100%" alt="">
             </div>
         </div>
