--- a/Work/index.html
+++ b/Work/index.html
@@ -5,8 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StartUp</title>
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./src/css/style.css">
     <link rel="shortcut icon" href="./src/img/favicon.ico">
@@ -72,23 +70,23 @@
         <div class="view">
             <div class="view-item">
                 <i class="fa fa-solid fa-certificate" style="color: #FFD43B;"></i>
-                <h2>1234</h2>
-                <p>Years Experience</p>
+                <h2>8</h2>
+                <p>Хамтрагч Байгууллага</p>
             </div>
             <div class="view-item">
                 <i class="fa fa-solid fa-users" style="color: #FFD43B;"></i>
-                <h2>1234</h2>
-                <p>Years Experience</p>
+                <h2>26+</h2>
+                <p>Нийт гишүүд</p>
             </div>
             <div class="view-item">
                 <i class="fa fa-solid fa-eye" style="color: #FFD43B;"></i>
-                <h2>1234</h2>
-                <p>Years Experience</p>
+                <h2>1890+</h2>
+                <p>Мэддэг</p>
             </div>
             <div class="view-item">
                 <i class="fa fa-solid fa-check" style="color: #FFD43B;"></i>
-                <h2>1234</h2>
-                <p>Years Experience</p>
+                <h2>1</h2>
+                <p>Итгэмжлэгдсэн клуб</p>
             </div>
         </div>
         <div class="card">
@@ -98,7 +96,7 @@
             </div>
             <div class="card-list">
                 <div class="card-items">
-                    <img src="./src/img/s1.png" alt="">
+                    <img src="https://citi.cw/files/2024/04/CREATIVITY-AND-INNOVATION-WEEK-2.png" alt="">
                     <div class="card-details">
                         <h3>Innovation week.</h3>
                         <p>
@@ -109,7 +107,8 @@
                     </div>
                 </div>
                 <div class="card-items active">
-                    <img src="./src/img/s2.png" alt="">
+                    <img src="https://www.ufe.edu.mn/image/%D0%BB%D0%BE%D0%B3%D0%BE%20%D0%B1%D0%BE%D1%81%D0%BE%D0%BE.png"
+                        alt="">
                     <div class="card-details">
                         <h3>Community system.</h3>
                         <p>
@@ -119,7 +118,7 @@
                     </div>
                 </div>
                 <div class="card-items">
-                    <img src="./src/img/s3.png" alt="">
+                    <img src="https://mrwallpaper.com/images/thumbnail/eeyore-black-clock-hzikb7reb4ft03wq.webp" alt="">
                     <div class="card-details">
                         <h3>Байгуулагдсан он</h3>
                         <p>
@@ -129,7 +128,8 @@
                     </div>
                 </div>
                 <div class="card-items">
-                    <img src="./src/img/s4.png" alt="">
+                    <img src="https://c1.wallpaperflare.com/preview/622/543/785/start-start-up-startup-career.jpg"
+                        alt="">
                     <div class="card-details">
                         <h3>Клубийн зорилго</h3>
                         <p>Оюутнуудад инновац сэтгэлгээг
@@ -139,14 +139,6 @@
                             бизнесийн гараагаа эхлүүлэхэд
                             туслалцаа үзүүлэх
                         </p>
-                    </div>
-                </div>
-                <div class="card-items">
-                    <img src="./src/img/s5.png" alt="">
-                    <div class="card-details">
-                        <h3>Гишүүдч</h3>
-                        <p>
-                            Одоогоор 25 гишүүнтэй.</p>
                     </div>
                 </div>
             </div>
@@ -163,7 +155,8 @@
                     шинэлэг аргаар шийдвэрлэхийг хүсдэг бизнес
                     эрхлэгчдээс бүтдэг.
                 </p>
-                <img src="./src/img/github.png" width="100%" alt="">
+                <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTgD7UKxFAuAhcvqMq7e8xx-ughLc2dzWDjrgdvoFgIrNxV0-Oa"
+                    width="100%" alt="">
             </div>
         </div>
 
@@ -178,9 +171,6 @@
     </footer>
 
     <script src="./src/javascript/main.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script> -->
 </body>
 
 </html>
